--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -12,3 +12,13 @@
 
 }
 
+.contentSigned::before {
+    content: '';
+    height: 100vh;
+    width: 420px;
+    background: url('./assets/background.svg') no-repeat;
+    background-size: cover;
+    position: absolute;
+    right: -200px;
+    top: 0;    
+}
